--- a/resources/css/landing-page.css
+++ b/resources/css/landing-page.css
@@ -7,11 +7,14 @@
     --text-light: #ffffff;
 }
 
+html,
+body {
+    height: 100%;
+}
+
 body {
     font-family: "Inter", sans-serif;
     margin: 0;
-    padding: 0;
-    background-color: var(--background-main);
     color: var(--text-dark);
 }
 
@@ -23,6 +26,16 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.main-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.main-content {
+    flex: 1;
 }
 
 .logo {
